--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h2>Tela de login customizada</h2>
-	<form name="f" action="/login/processar" method="post">
+	<form name="f" action="/login/autenticar" method="post">
 		<div id="error" style="display: none;">Usuário ou senha
 			incorretos.</div>
 		<div id="logout" style="display: none;">Você deslogou</div>
