FRONTEND - AUTENTICAÇÃO BÁSICA

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,27 +2,12 @@
 <html lang="en">
 
 <head>
-<<<<<<< HEAD
-  <meta charset="utf-8">
-  <title>Horacerta</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.c4eabf9b00b4d1ac84dc.css"></head>
-
-<body class="hold-transition skin-blue sidebar-mini">
-  <hr-root></hr-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.6e19e4aa7746c81f8c26.js"></script><script type="text/javascript" src="scripts.411213399b5e507f8c1d.js"></script><script type="text/javascript" src="main.1037823f22d6f118604e.js"></script></body>
-
-</html>
-=======
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 </head>
 <body>
-	<h2>Teste de aplicaÁ„o protegida por autenticaÁ„o do spring</h2>
-	<h3>VocÍ est· logado como: <div id="username"></div></h3>
+	<h2>Teste de aplica√ß√£o protegida por autentica√ß√£o do spring</h2>
+	<h3>Voc√™ est√° logado como: <div id="username"></div></h3>
 	<form action="/logout">
 		<button type="submit">Deslogar</button>
 	</form>
@@ -37,11 +22,10 @@
 		return null;
 	}
 	function getUsernameCookie(){
-		document.getElementById('username').innerHTML = getCookie('username') || 'Usu·rio n„o encontrado';
+		document.getElementById('username').innerHTML = getCookie('username') || 'Usu√°rio n√£o encontrado';
 	}
 	
 	getUsernameCookie();
 	</script>
 </body>
 </html>
->>>>>>> 22439bd28474229809faa0ae7676fe6fc2061ab2
