--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,30 +2,16 @@
 <html lang="en">
 
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-	<h2>Teste de aplicação protegida por autenticação do spring</h2>
-	<h3>Você está logado como: <div id="username"></div></h3>
-	<form action="/logout">
-		<button type="submit">Deslogar</button>
-	</form>
-	<script>
-	function getCookie(name) {
-		var cookie = document.cookie.split("=");
-		for(var i = 0; i < cookie.length; i ++){
-			if(cookie[i] == name){
-				return cookie[i + 1].split(";")[0];
-			}
-		}
-		return null;
-	}
-	function getUsernameCookie(){
-		document.getElementById('username').innerHTML = getCookie('username') || 'Usuário não encontrado';
-	}
-	
-	getUsernameCookie();
-	</script>
-</body>
+  <meta charset="utf-8">
+  <title>Horacerta</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.c4eabf9b00b4d1ac84dc.css"></head>
+
+<body class="hold-transition skin-blue sidebar-mini">
+  <hr-root></hr-root>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.6e19e4aa7746c81f8c26.js"></script><script type="text/javascript" src="scripts.411213399b5e507f8c1d.js"></script><script type="text/javascript" src="main.7a381789fe5512950c59.js"></script></body>
+
 </html>
