FRONTEND - [AJUSTES] NOVAS CORREÇÕES

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -14,6 +14,7 @@
 			background-image: url("../horacerta.jpg");
 			background-repeat: no-repeat;
 			background-size:100%; height: 100%; 
+			/*background-size:1450px;*/
 		}
 
 		.card {
