--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -13,7 +13,7 @@
 		 body {
 			background-image: url("../horacerta.jpg");
 			background-repeat: no-repeat;
-			background-size:100%; height: 100%; 
+			background-size: 100% 100%;
 			/*background-size:1450px;*/
 		}
 
@@ -31,7 +31,12 @@
 		}
 
 		.input, .input:focus {
-			background-color: rgba(255, 255, 255, 0.6)
+			background-color: rgba(255, 255, 255, 0.6);
+		}
+		
+		.form-control:focus {
+			border-color: rgba(119, 86, 31, 0.6);
+			box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(119, 86, 31, 0.6);
 		}
 
 		.btn {
@@ -121,6 +126,10 @@
 						</div>
 						<div class="form-group">
 							<input type="text" class="form-control input" id="cadNome" name="cadNome" placeholder="Nome" />
+						</div>
+						
+						<div class="form-group">
+							<input type="text" class="form-control input" id="cadCargo" name="cadCargo" placeholder="Cargo" />
 						</div>
 						
 						<div class="form-group">
