correções no commit

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -11,7 +11,7 @@
 		 }
 
 		 body {
-			background-image: url("../horacerta.jpg");
+			background-image: url("../horacerta-1.jpg");
 			background-repeat: no-repeat;
 			background-size: 100% 100%;
 			/*background-size:1450px;*/
