BACKEND - CADASTRO DE USUÁRIO

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,13 +5,14 @@
   <meta charset="utf-8">
   <title>Horacerta</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.c4eabf9b00b4d1ac84dc.css"></head>
+  
+</head>
 
-<body class="hold-transition skin-blue sidebar-mini">
-  <hr-root></hr-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.6e19e4aa7746c81f8c26.js"></script><script type="text/javascript" src="scripts.411213399b5e507f8c1d.js"></script><script type="text/javascript" src="main.7a381789fe5512950c59.js"></script></body>
+
+<body>
+	<h2>Aplicação protegida por login do Spring security</h2>
+</body>
 
 </html>
