--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -120,7 +120,7 @@
 							<a href="javascript:renderizarFormRegistro();" class="registrarLink">Não possuo uma conta</a>
 						</div>
 					</form>
-					<form style="display: none;" id="formRegistro" action="/login/registrar">
+					<form style="display: none;" id="formRegistro" action="/login/registrar" method="post">
 						<div class="form-group">
 							<input type="text" class="form-control input" id="cadUsername" name="cadUsername" placeholder="Email" />
 						</div>
