--- a/frontend/horacerta/src/index.html
+++ b/frontend/horacerta/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-blue sidebar-mini sidebar-collapse">
   <hr-root></hr-root>
 </body>
 
