FRONTEND - AJUSTE NO HISTÓRICO

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -246,6 +246,9 @@
 				}
 				
 			}
+		
+			var cargoEnum = {"Analista de Implantação": 1, "Programador": 2, "Consultor de Suporte": 3, "Assistente de Treinamento": 4, "Analista de Infraestrutura": 5, "Analista Fiscal": 6, "Diretor de Ofertas": 7, "Supervisor de Suporte": 8, "Consultor de Implantação": 9, "Consultor de Suporte DBA": 10, "Assistente Comercial": 11, "Analista de Negócios": 12, "Gestor P&D": 13, "Gestor de Implantação WMS": 14, "Gestor de Negócios": 15, "Gestora de RH": 16, "Gerente Comercial": 17, "Design Gráfico": 18, "Supervisor de Treinamento": 19, "Gestora Administrativa": 20, "Gestor de Desenvolvimento": 21, "Estagiário de Desenvolvimento": 22, "Auxiliar Administrativo": 23, "Gestor de Infraestrutura": 24, "Gestor de Implantação": 25, "Auxiliar de Serviços Gerais": 26, "Gestora de Suporte": 27, "Gestor de Manutenção": 28}
+			Object.freeze(cargoEnum);
 			
 			checkParametros();
 			
